// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<OrdersList /> should open <OrderUserContact> with data on "openPopup" method call 1`] = `
Array [
  <ul
    className="OrdersList"
  >
    <li
      className="OrdersListItem"
    >
      <div
        className="OrdersListItemIndex"
      >
        1
        .
      </div>
      OrderItem id: abc , status: +
    </li>
    <li
      className="OrdersListItem"
    >
      <div
        className="OrdersListItemIndex"
      >
        2
        .
      </div>
      OrderItem id: abc123 , status: ?
    </li>
  </ul>,
  <Modal
    bodyOpenClassName="ReactModal__Body--open"
    className="OrdersListModal"
    isOpen={true}
    onRequestClose={[Function]}
    overlayClassName="OrdersListModalOverlay"
  >
    <div
      className="OrderUserContact"
    >
      <div
        className="Title"
      >
        Иван Иваныч
      </div>
      <p
        className="Contact"
      >
        Телефон: 
        <span
          className="ContactValue"
        >
          +7 919 9111111
        </span>
      </p>
      <p
        className="Contact"
      >
        Почта: 
        <a
          href="mailto:ivanych@procvet.io"
        >
          ivanych@procvet.io
        </a>
      </p>
      <div
        className="Line"
      />
      <div
        className="Buttons"
      >
        <button
          className="ButtonTransparent"
          disabled={undefined}
          onClick={[Function]}
          type="button"
        >
          закрыть
        </button>
      </div>
    </div>
  </Modal>,
]
`;

exports[`<OrdersList /> should render list of items with statuses (?|+) 1`] = `
Array [
  <ul
    className="OrdersList"
  >
    <li
      className="OrdersListItem"
    >
      <div
        className="OrdersListItemIndex"
      >
        1
        .
      </div>
      OrderItem id: abc , status: +
    </li>
    <li
      className="OrdersListItem"
    >
      <div
        className="OrdersListItemIndex"
      >
        2
        .
      </div>
      OrderItem id: abc123 , status: ?
    </li>
  </ul>,
  <Modal
    bodyOpenClassName="ReactModal__Body--open"
    className="OrdersListModal"
    isOpen={false}
    onRequestClose={[Function]}
    overlayClassName="OrdersListModalOverlay"
  >
    <div
      className="OrderUserContact"
    >
      <div
        className="Title"
      />
      <p
        className="Contact"
      >
        Телефон: 
        <span
          className="ContactValue"
        />
      </p>
      <p
        className="Contact"
      >
        Почта: 
        <a
          href="mailto:undefined"
        />
      </p>
      <div
        className="Line"
      />
      <div
        className="Buttons"
      >
        <button
          className="ButtonTransparent"
          disabled={undefined}
          onClick={[Function]}
          type="button"
        >
          закрыть
        </button>
      </div>
    </div>
  </Modal>,
]
`;

exports[`<OrdersList /> should render w/o crashing 1`] = `
Array [
  <ul
    className="OrdersList"
  />,
  <Modal
    bodyOpenClassName="ReactModal__Body--open"
    className="OrdersListModal"
    isOpen={false}
    onRequestClose={[Function]}
    overlayClassName="OrdersListModalOverlay"
  >
    <div
      className="OrderUserContact"
    >
      <div
        className="Title"
      />
      <p
        className="Contact"
      >
        Телефон: 
        <span
          className="ContactValue"
        />
      </p>
      <p
        className="Contact"
      >
        Почта: 
        <a
          href="mailto:undefined"
        />
      </p>
      <div
        className="Line"
      />
      <div
        className="Buttons"
      >
        <button
          className="ButtonTransparent"
          disabled={undefined}
          onClick={[Function]}
          type="button"
        >
          закрыть
        </button>
      </div>
    </div>
  </Modal>,
]
`;
